updated chronos scheduler with entities,dummy controller, dummy services and connected postgres instance safely

--- a/Chronos_Scheduler/src/main/resources/application.properties
+++ b/Chronos_Scheduler/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=Chronos_Scheduler
+
+port=8080
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/chronos_db
+spring.datasource.username=chronos
+spring.datasource.password=chronos123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#replace legaccy timezone
+spring.jackson.time-zone=Asia/Kolkata
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.chronos=DEBUG
